# Trace

./: .gitignore  01_代码分析报告.md  03_Notion风格AI助手设计文档.md  DESIGN_SYSTEM.md  DEVELOPMENT_PLAN.md  README.md  TEST_START_GUIDE.md  middleware.ts  next.config.prod.ts  next.config.ts  package.json  pnpm-lock.yaml  roadmap.md  tailwind.config.ts  tsconfig.json
.claude/: settings.json  settings.local.json
app/: globals.css
app/[locale]/: layout.tsx  page.tsx
components/: BookSelector.tsx  BookSelector.tsx.backup  Canvas.tsx  DocumentRenderer.tsx  FilePreviewPanel.tsx  PdfViewer.tsx  QuickLook.tsx  SourceRail.tsx  SpotlightSearch.tsx  TitleBar.tsx
components/ai/: AIInlinePopup.tsx  AIPanel.tsx  (+2 more)
contexts/: BookContext.tsx  EditorContext.tsx  FilePreviewContext.tsx  SidebarContext.tsx  SpotlightContext.tsx  ThemeContext.tsx
docs/: TAURI_COMMANDS.md
hooks/: useQuickLook.ts  useSpotlight.ts
i18n/: request.ts  routing.ts
lib/: ai-bridge.ts  ai-trigger.ts  clipboard.ts  documentParser.ts  previewFile.ts  tauri.ts
log/: 02_产品分析报告.md  03_功能路线图与实施计划.md
messages/: de.json  en.json  es.json  fr.json  ja.json  zh.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai.rs  db.rs  main.rs  models.rs  parser.rs  search.rs  state.rs  style.rs  watcher.rs
src-tauri/src/commands/: ai.rs  blocks.rs  books.rs  documents.rs  files.rs  history.rs  mod.rs  notes.rs  search.rs  settings.rs  style.rs
src-tauri/src/services/: document_pipeline.rs  generation.rs  mod.rs  secure_storage.rs  style_profile.rs
types/: ai.ts  book.ts  document.ts  file.ts  index.ts  note.ts
(+21 files in other folders)
