[package]
name = "trace"
version = "0.1.0"
description = "Minimalist AI Collaboration Software"
authors = ["Trace Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["macos-private-api"] }
tauri-plugin-shell = "2.1"
tauri-plugin-dialog = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.5"
tantivy = "0.22"
notify = "6.1"
notify-debouncer-full = "0.3"
walkdir = "2.5"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
once_cell = "1.19"
dirs = "5.0"
# Document parsing dependencies (PDF preview uses frontend pdf.js; no pdf-extract)
docx-rs = "0.4"
zip = "0.6"
xml-rs = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
opt-level = "z"  # Optimize for size
